--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.1.*",
-        "doctrine/orientdb-odm": "dev-master",
+        "doctrine/orientdb-odm": "dev-master"
     },
     "autoload": {
         "psr-0": { "ConceptIt\\OrientDbBundle": "" }
