--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Tomasz Cyrankowski",
-            "email": "tomek@cocncept-it.pl",
+            "email": "tomek@concept-it.pl",
             "homepage": "http://concept-it.pl"
         }
     ],
