--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.8.*",
+        "symfony/symfony": "^2.8|^3.0",
         "doctrine/orientdb-odm": "dev-master"
     },
     "autoload": {
